k8s/v1.36.2/clusters/dev/hello-kubernetes/kubernetes-objects/virtualServiceKubernetes.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello-kubernetes-virtual-service
  namespace: hello-kubernetes
spec:
  hosts: ["hellokubernetes.maifuj.com"]
  gateways: ["istio-ingress/gateway-https"]
  http:
    - route:
        - destination:
            host: hello-kubernetes-hello-kubernetes-dev
            port: {number: 8080}
